# claude-mcps

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: test.yml
alif-flash/: CLAUDE.md  pyproject.toml
alif-flash/jlink/: AlifE7.JLinkScript  Devices.xml  flash-mram.sh  setup.sh
alif-flash/src/alif_flash/: __init__.py  __main__.py  devices.py  isp.py  jlink.py  ospi_rtt.py  server.py  xmodem.py
alif-flash/tests/: test_devices.py  test_isp.py  test_jlink.py  test_ospi_rtt.py  test_xmodem.py
elf-analysis/: CLAUDE.md  Cargo.toml  README.md
elf-analysis/src/: config.rs  lib.rs  main.rs
elf-analysis/src/tools/: handler.rs  mod.rs  size_report.rs  types.rs
elf-analysis/tests/: integration_tests.rs
embedded-probe/: CLAUDE.md  Cargo.toml  PLAN.md  PRD.md  README.md
embedded-probe/src/: coredump.rs  lib.rs  main.rs
embedded-probe/src/symbols/: mod.rs  resolver.rs
embedded-probe/src/tools/: debugger_tools.rs  types.rs
embedded-probe/tests/: integration_tests.rs
esp-idf-build/: CLAUDE.md  Cargo.toml  PLAN.md  PRD.md  README.md
esp-idf-build/src/: config.rs  error.rs  lib.rs  main.rs
esp-idf-build/src/tools/: build_tools.rs  mod.rs  types.rs
esp-idf-build/tests/: integration_tests.rs
hw-test-runner/: CLAUDE.md  pyproject.toml
hw-test-runner/src/hw_test_runner/: __main__.py  ble.py  provisioning.py  server.py  throughput.py
hw-test-runner/src/hw_test_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hw-test-runner/tests/: test_provisioning.py  test_server.py  test_throughput.py
knowledge-server/: CLAUDE.md  Cargo.toml
knowledge-server/src/: boards.rs  config.rs  db.rs  knowledge.rs  lib.rs  main.rs
knowledge-server/src/tools/: handler.rs  mod.rs  types.rs
knowledge-server/tests/: integration_tests.rs
linux-build/: CLAUDE.md  Cargo.toml  PRD.md  README.md
linux-build/src/: adb_client.rs  config.rs  docker_client.rs  lib.rs  main.rs
linux-build/src/tools/: linux_build_tools.rs  mod.rs  types.rs
linux-build/tests/: integration_tests.rs
openocd-debug/: CLAUDE.md  Cargo.toml  PRD.md  README.md
openocd-debug/src/: config.rs  lib.rs  main.rs  openocd_client.rs
openocd-debug/src/tools/: mod.rs  openocd_tools.rs  types.rs
saleae-logic/: .gitignore  CLAUDE.md  PLAN.md  PRD.md  README.md  pyproject.toml
saleae-logic/src/saleae_logic/: __main__.py  analysis.py  config.py  server.py
saleae-logic/tests/: test_analysis.py  test_analyzers.py  test_capture.py  test_connection.py  test_server_startup.py
uart-mcp/: CLAUDE.md  pyproject.toml
uart-mcp/src/uart_mcp/: __init__.py  __main__.py  serial_session.py  server.py
uart-mcp/tests/: test_serial_session.py  test_server.py
zephyr-build/: CLAUDE.md  Cargo.toml  PLAN.md  PRD.md  README.md
zephyr-build/src/: config.rs  error.rs  lib.rs  main.rs
zephyr-build/src/tools/: build_tools.rs  mod.rs  templates.rs  types.rs
zephyr-build/tests/: integration_tests.rs
