[package]
name = "elf-analysis"
version = "0.1.0"
edition = "2021"
description = "MCP server for ELF binary size analysis"
authors = ["Dan Ahern"]
license = "MIT"

[[bin]]
name = "elf-analysis"
path = "src/main.rs"

[lib]
name = "elf_analysis"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "0.3.2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
schemars = "1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
