[package]
name = "embedded-probe"
version = "0.1.0"
edition = "2021"
description = "MCP server for embedded debugging and flash programming via probe-rs"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "debugging", "embedded", "probe-rs", "flash"]
categories = ["development-tools", "embedded"]

[dependencies]
# MCP SDK
rmcp = { version = "0.3.2", features = ["server", "macros", "transport-io"] }

# Core debugging library
probe-rs = "0.25"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command line and configuration
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
regex = "1"

# ELF parsing for RTT symbol detection
goblin = "0.8"

# Async utilities
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"

[features]
default = []
full-integration = []

[[bin]]
name = "embedded-probe"
path = "src/main.rs"

[lib]
name = "embedded_probe"
path = "src/lib.rs"