[package]
name = "knowledge-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for structured knowledge management and hardware-aware retrieval"
authors = ["Dan Ahern"]
license = "MIT"

[[bin]]
name = "knowledge-server"
path = "src/main.rs"

[lib]
name = "knowledge_server"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "0.3.2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
schemars = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
