[package]
name = "linux-build"
version = "0.1.0"
edition = "2021"
description = "MCP server for Linux cross-compilation via Docker containers"
authors = ["Dan Ahern"]
license = "MIT"

[[bin]]
name = "linux-build"
path = "src/main.rs"

[lib]
name = "linux_build"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "0.3.2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
schemars = "1"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
