[project]
name = "saleae-logic"
version = "0.1.0"
description = "MCP server for Saleae Logic 2 automation"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "logic2-automation>=1.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
